fixing navbar links overlapping tutorial and settings icons

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -185,3 +185,9 @@
     display: none;
   }
 }
+
+@media (max-width: 1090px) {
+  .navbar-links a {
+    opacity: 0;
+  }
+}
